	Suggested by Chris Moore <christopher.ian.moore@gmail.com>.

2007-10-01  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-math.el (math-largest-emacs-expt): Handle the cases
	when `expt' doesn't give range errors.

2007-10-01  Markus Triska  <markus.triska@gmx.at>

	* calc/calc-math.el (math-smallest-emacs-expt):
	Make the computation more robust.

2007-09-30  David Kastrup  <dak@gnu.org>

	* startup.el (argv): Alias for `command-line-args-left' to use as
	`(pop argv)' inside of --eval command sequences.  Allows for
	passing shell commands into Emacs verbatim without need for Lisp
	quoting.

	* autorevert.el (auto-revert-handler): In `auto-revert-tail-mode',
	check only for changed size.
	(auto-revert-tail-handler): Get size from caller.  If the file has
	shrunk, tail the whole file again (the file presumably has been
	rewritten).

	* woman.el (woman-topic-all-completions, woman-mini-help):
	Fix fallout from 2007-09-07 introduction of `dolist' when the list
	actually was being manipulated in the loop.
	(woman-Cyg-to-Win, woman-pre-process-region)
	(woman-horizontal-escapes, woman-if-body, woman-unescape)
	(woman-strings, woman-special-characters, woman1-hc)
	(woman-change-fonts, woman-find-next-control-line):
	Use `match-beginning' rather than `match-string' when the result is
	just used as a flag.

2007-09-30  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-compat.el: New file.

	* net/tramp.el:
	* net/tramp-fish.el:
	* net/tramp-smb.el:
	* net/tramp-uu.el:
	* net/trampver.el: Move compatibility code to tramp-compat.el.
	Apply `mapc' instead of `mapcar' when the code needs side effects
	only.  Move utf-8 coding cookie to the second line.

2007-09-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* term/x-win.el (x-gtk-stock-map): Add Gnus and MH-E icons.
	Improve custom type.
	(icon-map-list): Make it customizable.  Document how to disable
	stock icons.

2007-09-30  Richard Stallman  <rms@gnu.org>
